# Surena4HumanoidSimulation-Choreonoid

./: CMakeLists.txt  Choreonoid.cbp  README.md
devel/: .catkin
sample/HelloWorldPlugin/: CMakeLists.txt  HelloWorldPlugin.cpp  choreonoidsurena2_automoc.cpp  main.cpp  mainwindow1.cpp  mainwindow1.h  mainwindow1.ui  moc_mainwindow1.cpp  ui_mainwindow1.h
sample/SURENA/: CMakeLists.txt  SURENA4Offline.cpp  SURENA4OfflineRamp.cpp  SURENA4Online.cpp  SURENA4Online1.cpp  SURENA4Online2.cpp  SURENA4Online2_automoc.cpp  SURENA4Online3.cpp  SURENA4PDTest.cpp  SURENA4PushRecovery.cpp  mainwindow.ui  moc_chartform.cpp  moc_mainwindow.cpp  moc_qcustomplot.cpp  surena4PDtest.cnoid  surena4offline.cnoid  surena4online2.cnoid  surena4online3.cnoid  surena4pushrecovery.cnoid  test.txt  test0.txt  ui_chartform.h  ui_mainwindow.h  x.csv
sample/SURENA/Headers/: LinkM.h  Robot.h  TaskSpace.h  chartform.h  mainwindow.h  moc_qcustomplot.cpp_parameters  qcustomplot.h  taskspaceoffline.h  taskspaceonline.h  taskspaceonline1.h  taskspaceonline2.h  taskspaceonline3.h
sample/SURENA/Sources/: LinkM.cpp  MinimumJerkInterpolation.cpp  Robot.cpp  TaskSpace.cpp  chartform.cpp  mainwindow.cpp  mmqcustomplot.cpp  qcustomplot.cpp  taskspaceoffline.cpp  taskspaceofflineRamp.cpp  taskspaceonline.cpp  taskspaceonline1.cpp  taskspaceonline2.cpp  taskspaceonline3.cpp
sample/Sample1Plugin/: Sample1Plugin.cpp
sample/SimpleController/: SR1MinimumController.cpp  SR1WalkPatternController.cpp
sample/SimpleController-build/: Project.cbp
share/model/SR1/Suren4 kamar real moment of inertia/: FootL_SURENA4.wrl  FootR_SURENA4.wrl  Foot_HRP11.wrl  SR1.11wrl  SR1.wrl
share/model/SR1/Suren4 kamar real moment of inertia/parts/: FootL1_SURENA4.wrl  FootR1_SURENA4.wrl  FootR_SURENA4.wrl  Pelvis.wrl  ShankL_SURENA4.wrl  ShankR_SURENA4.wrl  ThighL_SURENA4.wrl  ThighR_SURENA4.wrl  Torso_SURENA4.wrl  fore-arm-left.wrl  fore-arm-right.wrl  hand-left.wrl  hand-right.wrl  upper-arm-left.wrl  upper-arm-right.wrl
share/model/SR1/Suren4 kamar real moment of inertia/parts1/: Foot_HRP1.wrl  Pelvis_HRP1.wrl  Trunk_HRP1.wrl
share/model/SR1/Suren4 kamar real moment of inertia/partsbig/: AnkleR_Uni_SURENA4.wrl  FootL_SURENA4.wrl  HipL_SURENA4.wrl  HipL_Uni_SURENA4.wrl  Pelvis1.wrl  ShankL_SURENA41.wrl  Waist_Uni_SURENA41.wrl  foot L.wrl  foot R.wrl
share/model/SR1/Suren4 kamar real moment of inertia/something/: Foot_HRP1.wrl  Foot_HRP11.wrl  Shank_HRP1.wrl  Thigh_HRP1.wrl
share/model/misc/: behindwall.wrl  dwall .wrl  floor.wrl  frontwall.wrl  leftwall.wrl  wall.wrl
share/model/tank/: tank.body
share/project/: SR1WalkPush.cnoid  surena4offlineRamp.cnoid  surena4online.cnoid  surena4online2.cnoid
src/Base/: CnoidBase_automoc.cpp  Item.h  moc_Action.cpp  moc_Action.cpp_parameters  moc_ActionGroup.cpp  moc_ActionGroup.cpp_parameters  moc_App.cpp  moc_App.cpp_parameters  moc_ButtonGroup.cpp  moc_ButtonGroup.cpp_parameters  moc_Buttons.cpp  moc_Buttons.cpp_parameters  moc_CheckBox.cpp  moc_CheckBox.cpp_parameters  moc_ComboBox.cpp  moc_ComboBox.cpp_parameters  moc_Dialog.cpp  moc_Dialog.cpp_parameters  moc_FloatingNumberBox.cpp  moc_FloatingNumberBox.cpp_parameters  moc_ImageWidget.cpp  moc_ImageWidget.cpp_parameters  moc_InfoBar.cpp  moc_InfoBar.cpp_parameters  moc_ItemSelectionModel.cpp  moc_ItemSelectionModel.cpp_parameters  moc_ItemTreeView.cpp  moc_ItemTreeView.cpp_parameters  moc_LineEdit.cpp  moc_LineEdit.cpp_parameters  moc_Menu.cpp  moc_Menu.cpp_parameters  moc_Process.cpp  moc_Process.cpp_parameters  moc_ScrollBar.cpp  moc_ScrollBar.cpp_parameters  moc_SelectionListEditor.cpp  moc_SelectionListEditor.cpp_parameters  moc_Slider.cpp  moc_Slider.cpp_parameters  (+17 more)
src/BodyPlugin/: BodyItem.cpp  CnoidBodyPlugin_automoc.cpp  EditableSceneBody.cpp  moc_LinkTreeWidget.cpp  moc_LinkTreeWidget.cpp_parameters  qrc_BodyPlugin.cpp
src/Choreonoid/: qrc_choreonoid.cpp
src/PoseSeqPlugin/: qrc_PoseSeqPlugin.cpp
